--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -10,7 +10,7 @@
         <title>Ecoleta</title>
     {% endblock title %}
 
-
+    <link rel="icon" type="image/x-icon" href="/assets/reciclar.ico">
    
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/main.css">
