--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -4,7 +4,8 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <meta property="og:description" content="This is an application that creates selective garbage collection points and then allows you to view the registered points.">
+    <meta property="og:image" content="https://uploaddeimagens.com.br/images/004/178/837/full/Design_sem_nome_%282%29.png?1669345897.png">
 
     {% block title %}
         <title>Ecoleta</title>
