--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:description" content="This is an application that creates selective garbage collection points and then allows you to view the registered points.">
     <meta property="og:image" content="https://uploaddeimagens.com.br/images/004/178/847/full/cover_%281%29.png">
+    <meta property="description" content="This is an application that creates selective garbage collection points and then allows you to view the registered points.">
+    <meta property="image" content="https://uploaddeimagens.com.br/images/004/178/847/full/cover_%281%29.png">
 
     {% block title %}
         <title>Ecoleta</title>
